# ChangeLog for app-xemacs/xemacs-base
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/xemacs-base/ChangeLog,v 1.34 2012/06/02 14:11:37 aballier Exp $

*xemacs-base-2.39 (07 Mar 2014)

  07 Mar 2014; Mats Lidell <matsl@gentoo.org> -xemacs-base-2.36.ebuild,
  -xemacs-base-2.37.ebuild, +xemacs-base-2.39.ebuild:
  Upstream experimental version bump

*xemacs-base-2.37 (03 Sep 2013)

  03 Sep 2013; Mats Lidell <matsl@gentoo.org> +xemacs-base-2.37.ebuild:
  app-xemacs/xemacs-base: Upstream experimental version bump

*xemacs-base-2.36 (18 Jul 2013)

  18 Jul 2013; Mats Lidell <matsl@gentoo.org> +metadata.xml,
  +xemacs-base-2.36.ebuild:
  app-xemacs/xemacs-base: Upstream experimental version bump and use EAPI=5