@@ -1,1 +1,2 @@
 DIST xemacs-base-2.39-pkg.tar.gz 577791 SHA256 568a9c329b818e481bb4af5ea8d06a0e29615f348720d33fa2ca660946fe2c72 SHA512 77762b5e6b1fb0c4d7e7c44b80c43511026b05b0b7df2333499db2ec044e217a624f6e4aed7d77de01f972a466ef9d54d96ad7a234980bcf3758b97ac4100b43 WHIRLPOOL 8536fad8f22ac60ae0368d0b23556a9adf1cd140f3add9c917b62bc148a0d48a2c8bf6fd1c114e61410743100f18fb68fdf52d81ef6eca48792097c28992ceb1
+DIST xemacs-base-2.41-pkg.tar.gz 578050 SHA256 0bfd495dcfdf5d94bb3198ebd26b07bb11ac7ce413ef0433d3c3344d7ee600e0 SHA512 c9eb8027fc591b2363492e4368708f41c6e0d3a15e099f213260ec27719f09bab7e8e2eb9d32f52ff98208122fdb6e665f5ab7ce3137f8d83fe5b823374d37ea WHIRLPOOL 2cb54d19eaa4b363afa1ad58310aa9bbbd5419599d1210c1a3a98bd8a74f6cde95f74892a0894410656ca9e60bc5422805ef67b8f887a48cbb9ac8b1c5c81da9
