@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/xemacs-base/ChangeLog,v 1.34 2012/06/02 14:11:37 aballier Exp $
 
+*xemacs-base-2.41 (08 Jul 2014)
+
+  08 Jul 2014; Mats Lidell <matsl@gentoo.org> +xemacs-base-2.41.ebuild:
+  Pre release version bump.
+
 *xemacs-base-2.39 (07 Mar 2014)
 
   07 Mar 2014; Mats Lidell <matsl@gentoo.org> -xemacs-base-2.36.ebuild,
